# DorkHunter

./: .gitignore  README.md  full_guido.txt  google_dorker.py  queries.py  test_fixes.py
dorker_verify/: Cargo.toml  install_verifier.bat  uninstall_verifier.bat
dorker_verify/src/: disposable.rs  main.rs  verifier.rs
extension/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js  queries.js
