[package]
name = "dorker_verify"
version = "1.0.0"
edition = "2021"
description = "Chrome Native Messaging email verifier for Google Dorker PRO"

[[bin]]
name = "dorker_verify"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
regex = "1"
byteorder = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
codegen-units = 1
